--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 streamlit
+pickle
 matplotlib==3.5.1
 lxml
-numpy==1.21.5
+numpy==1.22.0
 pandas==1.4.2
 scikit-image 
+plotly==5.5.0
 pillow
 imgaug==0.4.0
 scikit-learn==1.0.2
@@ -16,5 +18,5 @@ konlpy
 jvm
 PyPI
 streamlit-bokeh-events
-pickle
+
 #####
